<resources>
    <string name="app_name">Animeku</string>
    <string name="login">LOGIN</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="register">REGISTER</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="update_profile">Update Profile</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="schedule">Schedule</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="masukkan_nama_lengkap">Masukkan nama Lengkap</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="masukkan">Masukkan</string>
    <string name="this_profile">Ini activity Profile</string>
    <string name="this_category">Ini fragment Category</string>
    <string name="category_lifestyle">Ke fragment Lifestyle</string>
    <string name="category_name">Anime Name</string>
    <string name="category_description">Anime Description</string>
    <string name="to_profile">Ke Halaman Profile Activity</string>
    <string name="show_dialog">Tampilkan sebuah dialog</string>
    <string name="hello_home_fragment">Hello Ini Home Fragment</string>
    <string name="to_category">Ke fragment Category</string>
    <string name="question_coach">Siapa pelatih tersukses Machester United?</string>
    <string name="sir_alex_ferguson">Sir Alex Ferguson</string>
    <string name="jose_mourinho">Jose Mourinho</string>
    <string name="louis_van_gaal">Louis Van Gaal</string>
    <string name="david_moyes">David Moyes</string>
    <string name="choose">Pilih</string>
    <string name="close">Tutup</string>
</resources>