<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.profileFragment">
   <ImageView
       android:layout_width="match_parent"
       android:layout_height="150dp"
       android:scaleType="centerCrop"
       android:src="@drawable/sky"
       android:layout_gravity="top"/>

   <de.hdodenhof.circleimageview.CircleImageView
       android:id="@+id/profile_image"
       android:layout_width="96dp"
       android:layout_height="96dp"
       android:layout_gravity="top|center_horizontal"
       android:layout_marginTop="100dp"
       app:civ_border_width="2dp"
       app:civ_border_color="@color/aqua"
       android:src="@mipmap/ic_launcher" />

   <LinearLayout
       android:id="@+id/profile"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="200dp"
       android:orientation="vertical">

      <TextView
          android:id="@+id/name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:fontFamily="@font/poppins_bold"
          android:layout_gravity="center"
          android:paddingTop="10dp"
          android:textColor="@color/aqua"
          android:textStyle="bold"
          tools:text="Ahmad Mufli Ramadhan"/>

      <TextView
          android:id="@+id/email"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:fontFamily="@font/poppins_medium"
          android:layout_gravity="center"
          tools:text="Gacor@wak.com"/>

      <LinearLayout
          android:id="@+id/group_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

         <Button
             style="?attr/materialButtonOutlinedStyle"
             android:id="@+id/settings"
             android:layout_width="320dp"
             android:layout_height="wrap_content"
             android:text="@string/settings"
             android:layout_gravity="center"
             android:fontFamily="@font/poppins_medium"
             app:icon="@drawable/settings"
             app:iconGravity="textEnd"
             app:iconTint="@color/aqua"

             android:textColor="@color/aqua"
             android:textStyle="bold"
             android:layout_marginTop="18dp"
             />
         <Button
             style="?attr/materialButtonOutlinedStyle"
             android:id="@+id/update_profile"
             android:layout_width="320dp"
             android:layout_height="wrap_content"
             android:text="@string/update_profile"
             android:layout_gravity="center"
             android:fontFamily="@font/poppins_medium"
             android:textColor="@color/aqua"
             android:textStyle="bold"
             app:icon="@drawable/edit"
             app:iconGravity="textEnd"
             app:iconTint="@color/aqua"
             android:layout_marginTop="18dp"
             />
         <Button
             style="?attr/materialButtonOutlinedStyle"
             android:id="@+id/about"
             android:layout_width="320dp"
             android:layout_height="wrap_content"
             android:text="@string/about"
             android:layout_gravity="center"
             android:fontFamily="@font/poppins_medium"
             android:textColor="@color/aqua"
             android:textStyle="bold"
             app:icon="@drawable/question"
             app:iconGravity="textEnd"
             app:iconTint="@color/aqua"
             android:layout_marginTop="18dp"
             />
         <Button
             style="?attr/materialButtonOutlinedStyle"
             android:id="@+id/logout"
             android:layout_width="320dp"
             android:layout_height="wrap_content"
             android:text="@string/logout"
             android:layout_gravity="center"
             android:fontFamily="@font/poppins_medium"
             android:textColor="@color/aqua"
             android:textStyle="bold"
             app:icon="@drawable/logout"
             app:iconGravity="textEnd"
             app:iconTint="@color/aqua"
             android:layout_marginTop="18dp"
             />
      </LinearLayout>
   </LinearLayout>

</FrameLayout>