<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.LoginActivity"
    android:background="@drawable/background"
    android:padding="10dp">

    <!-- Layout untuk Logo dan Text Login -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/logo_login"
            android:layout_width="80sp"
            android:layout_height="70sp"
            android:layout_gravity="center"
            android:drawableStart="@drawable/anime_logo" />

        <!-- Text Login -->
        <TextView
            android:id="@+id/textLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:fontFamily="@font/poppins_bold"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="@color/birusedikitmuda"
            android:textSize="30sp" />
    </LinearLayout>

    <!-- Layout untuk Username dan Password -->
    <LinearLayout
        android:id="@+id/formLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:hint="Email"
            android:textColorHint="@color/white"
            app:startIconDrawable="@drawable/person"
            app:endIconMode="clear_text"
            app:startIconContentDescription="@string/app_name"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Input Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:textColorHint="@color/white"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/key"
            app:iconTint = "@color/white"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/gacor"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/formLog"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            style="@style/Widget.Material3.Button.TonalButton"
            android:id="@+id/loginbutton"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/birusedikitmuda"
            android:textColor="@color/white"
            android:text="Login"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="Belum punya akun?"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginStart="70dp"
                android:layout_gravity="center"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/register"
                android:layout_width = "70dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Register"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/blue"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/gacor"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/view"
            android:layout_width="300dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            android:background="@color/birusedikitmuda"
            android:layout_height="0.5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Use other method"
            android:fontFamily="@font/poppins_medium"
            android:textAlignment="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/google"
                android:layout_width="40sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="125dp"
                android:drawableLeft="@drawable/icons8_google" />

            <TextView
                android:id="@+id/facebook"
                android:layout_width="40sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:drawableEnd="@drawable/facebook_svgrepo_com" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
